# AP4AL

./: README.md
AP4AL_PulsemestralniPrace/app/: main.c
AP4AL_PulsemestralniPrace/src/: CMakeLists.txt  data.c  list.c
AP4AL_PulsemestralniPrace/src/include/: data.h  list.h
AP4AL_SemestralniPrace/app/: main.c
AP4AL_SemestralniPrace/src/: list.c
AP4AL_SemestralniPrace/src/include/: list.h
AP4AL_SemestralniPrace/tests/: CMakeLists.txt
